using scss to build style.css

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -27,12 +27,14 @@ body {
 }
 
 .container__layer1 {
+  position: relative;
   animation-direction: alternate-reverse;
   animation-duration: 5s;
 }
 
 .container__layer2 {
   animation-duration: 8s;
+  animation-direction: reverse;
 }
 
 .container__clock {
