--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,19 +33,17 @@ body {
   top: 0;
   bottom: 0;
   background: linear-gradient(90deg, $neon-blue 50%, #922d50 -50%);
-  animation: anime 8s ease-in-out infinite alternate;
+  animation: anime 10s ease-in-out infinite alternate;
   z-index: -1;
-  opacity: 1;
+  opacity: 0.7;
 }
 
-.container__layer1 {
-  position: relative;
+.layer1 {
   animation-direction: alternate-reverse;
   animation-duration: 5s;
 }
-.container__layer2 {
-  animation-duration: 8s;
-  animation-direction: reverse;
+.layer2 {
+  animation-duration: 10s;
 }
 
 .container__clock {
