--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,3 +71,19 @@ body {
     transform: translateX(50%);
   }
 }
+
+@media (max-width: 680px) {
+  .container__clock {
+    border-radius: 2rem;
+    padding: 1rem 5rem;
+    width: max-content;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    &--timer {
+      font-size: 4.5rem;
+      color: $alice-blue;
+    }
+  }
+}
